<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

<LinearLayout
    android:id="@+id/headerTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center">

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"


        />
</LinearLayout>

    <TextView
        android:id="@+id/bgList"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/headerTitle"
        android:background="@color/primary"
        />

    <EditText
        android:id="@+id/cityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerTitle"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/nameField"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
       />

    <LinearLayout
        android:id="@+id/centralInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bgList"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/nameCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bgList"
            android:fontFamily="@font/montserrat_bold"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:text=""
            android:textColor="@color/text"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text=""
            android:textColor="@color/text"
            android:textSize="110sp"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1" />

        <TextView
            android:id="@+id/nameWheather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_medium"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsWheather"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="80dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hind"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="15dp"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/speedWind"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_medium"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="15dp"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"/>
    </LinearLayout>



        <TextView
            android:id="@+id/humidity"
            android:layout_above="@id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text=""
            android:textColor="@color/text"
            android:textSize="17sp"
            android:layout_marginBottom="80dp"
            android:layout_marginStart="48dp"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"/>

    <TextView
        android:id="@+id/speedWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/montserrat_medium"
        android:shadowColor="@color/stroke"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:text=""
        android:textColor="@color/text"
        android:textSize="17sp" />

        <TextView
            android:id="@+id/cloud"
            android:layout_above="@id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginBottom="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="55dp"
            android:shadowColor="@color/stroke"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            />







    <LinearLayout
        android:id="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
<!---->
        <Button
            android:id="@+id/buttonDetalic"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/details"
            android:textColor="@color/textButton"/>


        <Button
            android:id="@+id/buttonSend"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button"
            android:text="@string/now"
            android:textColor="@color/textButton"/>



        <Button
            android:id="@+id/sevenDays"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/map"
            android:textColor="@color/textButton"/>

    </LinearLayout>


</RelativeLayout>